<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.formpinjam.FormPinjamActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_tv_pinjam"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/pilih_barang"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <AutoCompleteTextView
            android:id="@+id/actv_barang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            tools:ignore="LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_tv_pinjam">

        <RadioButton
            android:id="@+id/rb_diri_sendiri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:buttonTint="@color/green_base"
            android:layoutDirection="rtl"
            android:text="@string/diri_sendiri" />

        <RadioButton
            android:id="@+id/rb_orang_lain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:buttonTint="@color/green_base"
            android:layoutDirection="rtl"
            android:text="@string/orang_lain" />

    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_pinjam"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/pinjam"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_batal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/roundedbuttondisabled"
        android:text="@string/batalkan"
        app:layout_constraintBottom_toTopOf="@id/bt_pinjam"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>