<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:text="@string/umroh_farfasa"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/profile_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />


        <androidx.cardview.widget.CardView
            android:id="@+id/green_card"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:cardBackgroundColor="@color/green_base"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/profile_layout"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:elevation="10dp"
            app:layout_constraintBottom_toBottomOf="@id/green_card"
            app:layout_constraintEnd_toStartOf="@id/schedule_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/green_card">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/card_profile"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:gravity="center|center_vertical"
                    android:orientation="vertical"
                    tools:ignore="UnusedAttribute,UseCompoundDrawables">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/user"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/data_diri"
                        android:textSize="16sp" />

                </LinearLayout>


            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/schedule_layout"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:elevation="10dp"
            app:layout_constraintBottom_toBottomOf="@id/green_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/profile_layout"
            app:layout_constraintTop_toBottomOf="@id/green_card">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/card_jadwal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:gravity="center|center_vertical"
                    android:orientation="vertical"
                    tools:ignore="UnusedAttribute,UseCompoundDrawables">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/calendar_icon"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jadwal"
                        android:textSize="16sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/peminjaman_layout"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/informasi_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_layout">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/card_peminjaman"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:gravity="center_vertical|center"
                    android:orientation="vertical"
                    tools:ignore="UnusedAttribute,UseCompoundDrawables">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/peminjaman_icon"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/peminjaman"
                        android:textSize="16sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/informasi_layout"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/peminjaman_layout"
            app:layout_constraintTop_toTopOf="@id/peminjaman_layout">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/card_informasi"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:gravity="center|center_vertical"
                    android:orientation="vertical"
                    tools:ignore="UnusedAttribute,UseCompoundDrawables">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/news"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/informasi"
                        android:textSize="16sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/img_log_out"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:elevation="10dp"
            android:src="@drawable/ic_baseline_logout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>